[project]
name = "mcp-server-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.6.0",            # MCP 서버 코어
    "pydantic>=2.0.0",       # 데이터 모델 유효성 검사
    "pydantic-settings>=2.0.0", # 설정 관리 (.env 파일 포함)
    "aiohttp>=3.8.0",        # 비동기 HTTP 클라이언트 (API 호출용)
    "anyio>=3.6.0",          # 비동기 실행기 (serve 함수 실행용)
]